<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GameLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/background_secondary">

    <ImageView
        android:id="@+id/gameImg"
        android:layout_width="117dp"
        android:layout_height="183dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yourReviewTV"
        android:layout_width="104dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/yourReviewOf"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintStart_toEndOf="@+id/gameImg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameNameTV"
        android:layout_width="126dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/yourReviewTV"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reviewTV"
        android:layout_width="237dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/gameImg"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/hoursSpent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/hoursSpent"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/gameImg"
        app:layout_constraintTop_toBottomOf="@+id/yourReviewTV" />

    <TextView
        android:id="@+id/hoursSpentTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/hoursSpent"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/hoursSpent"
        app:layout_constraintTop_toBottomOf="@+id/yourReviewTV" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/rating"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/gameImg"
        app:layout_constraintTop_toBottomOf="@+id/hoursSpent" />

    <TextView
        android:id="@+id/ratingTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="12dp"
        android:text="@string/rating"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/rating"
        app:layout_constraintTop_toBottomOf="@+id/hoursSpentTV" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/review"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/gameImg"
        app:layout_constraintTop_toBottomOf="@+id/rating" />

</androidx.constraintlayout.widget.ConstraintLayout>
